# jan-1st

./: .gitignore  README.md
backend/: .env.example  README.md  calendar_type.py  callback_handler.py  main.py  prompts.py  pyproject.toml  verify_socket.py
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/: AgentAvatar.tsx  AgentNetwork.tsx  CalendarView.tsx  ChatInput.tsx  FloatingBubbles.tsx  MessageBubble.tsx  SocketStatus.tsx  SpecialistBubble.tsx  TypingIndicator.tsx
frontend/src/hooks/: useConversation.ts  useSocketIntegration.ts
frontend/src/pages/: Index.tsx
frontend/src/types/: chat.ts
frontend/src/utils/: icsExport.ts
