[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-socketio>=5.6.0",
    "strands-agents-tools>=0.2.19",
    "strands-agents[openai]>=1.22.0",
    "websocket-client>=1.9.0",
    "simple-websocket>=1.0.0",
    "gevent-websocket>=0.10.1",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
]
